--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "> tsx renderer.",
   "repository": {
     "type": "git",
-    "url": "git+___"
+    "url": "git+https://github.com/Saber2pr/tsx.git"
   },
   "author": "saber2pr",
   "license": "ISC",
@@ -18,6 +18,11 @@
     "start": "tsc --watch",
     "dev": "rollup -c --watch"
   },
+  "keywords": [
+    "jsx",
+    "tsx",
+    "react"
+  ],
   "devDependencies": {
     "typescript": "^3.4.3",
     "rollup": "^1.1.2",
