--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,7 @@
     "esModuleInterop": true,
     "jsx": "react",
     "jsxFactory": "TSX",
-    "lib": [
-      "dom",
-      "es2015"
-    ]
+    "lib": ["dom", "esnext"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "lib"]
