--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saber2pr/tsx",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "> tsx renderer.",
   "repository": {
     "type": "git",
@@ -22,9 +22,9 @@
     "react"
   ],
   "devDependencies": {
-    "typescript": "^3.4.3",
     "rollup": "^1.1.2",
     "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0"
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "typescript": "^3.4.3"
   }
 }
